outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-5130820679623856757_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the sum of normalized distances to unvisited nodes, emphasizing both proximity and network centrality with adjustable weights (50% for immediate distance and 50% for connectivity).}
                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the sum of normalized distances to unvisited nodes, emphasizing both proximity and network centrality with adjustable weights (50% for immediate distance and 50% for connectivity).}
                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'
